force-app/main/default/objects/Client_Handoff_Summary__c/Client_Handoff_Summary__c.object-meta.xml
<CustomObject>
    <label>Client Handoff Summary</label>
    <nameField>
        <displayFormat>CHS# {00000}</displayFormat>
        <label>Client Handoff Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Handoff Summary</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>