force-app/main/default/objects/Client_Handoff_Summary__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account__c</referenceTo>
    <relationshipLabel>Client Handoff Summary</relationshipLabel>
    <relationshipName>Client_Handoff_Summary</relationshipName>
    <type>Lookup</type>
</CustomField>