force-app/main/default/objects/Client_Handoff_Summary__c/fields/Account_Health_Notes__c.field-meta.xml
<CustomField>
    <fullName>Account_Health_Notes__c</fullName>
    <formula>Account__r.Client_Risk_Notes__c</formula>
    <label>Account Health Notes</label>
    <type>Text</type>
</CustomField>