force-app/main/default/objects/Client_Handoff_Summary__c/fields/Account_Health_Score__c.field-meta.xml
<CustomField>
    <fullName>Account_Health_Score__c</fullName>
    <formula>TEXT(Account__r.Client_Risk__c)</formula>
    <label>Account Health Score</label>
    <type>Text</type>
</CustomField>