force-app/main/default/objects/Client_Handoff_Summary__c/fields/Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner__c</fullName>
    <formula>Account__r.OwnerId.FirstName +&apos; &apos;+ Account__r.OwnerId.LastName</formula>
    <label>Account Owner</label>
    <type>Text</type>
</CustomField>