force-app/main/default/objects/Client_Handoff_Summary__c/fields/Additional_Details_DM__c.field-meta.xml
<CustomField>
    <fullName>Additional_Details_DM__c</fullName>
    <label>Additional Details - DM</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>