force-app/main/default/objects/Client_Handoff_Summary__c/fields/Box_Link_for_Legal_Documents__c.field-meta.xml
<CustomField>
    <fullName>Box_Link_for_Legal_Documents__c</fullName>
    <label>Box Link for Legal Documents</label>
    <type>Url</type>
</CustomField>