force-app/main/default/objects/Client_Handoff_Summary__c/fields/Business_reviews_available_on_Box__c.field-meta.xml
<CustomField>
    <fullName>Business_reviews_available_on_Box__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Business reviews available on Box</label>
    <type>Checkbox</type>
</CustomField>