force-app/main/default/objects/Client_Handoff_Summary__c/fields/Business_reviews_discussed__c.field-meta.xml
<CustomField>
    <fullName>Business_reviews_discussed__c</fullName>
    <label>Business reviews discussed?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>