force-app/main/default/objects/Client_Handoff_Summary__c/fields/Call_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Call_Frequency__c</fullName>
    <label>Call Frequency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>