force-app/main/default/objects/Client_Handoff_Summary__c/fields/Client_Must_Approve_Assets__c.field-meta.xml
<CustomField>
    <fullName>Client_Must_Approve_Assets__c</fullName>
    <formula>TEXT(Client_Overview__r.Client_Must_Approve_Assets__c)</formula>
    <label>Client Must Approve Assets</label>
    <type>Text</type>
</CustomField>