force-app/main/default/objects/Client_Handoff_Summary__c/fields/Client_Overview__c.field-meta.xml
<CustomField>
    <fullName>Client_Overview__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Overview</label>
    <referenceTo>Contract__c</referenceTo> 
    <relationshipLabel>Client Handoff Summary</relationshipLabel>
    <relationshipName>Client_Handoff_Summary</relationshipName>
    <type>Lookup</type>
</CustomField>