force-app/main/default/objects/Client_Handoff_Summary__c/fields/Client_Success_Manager__c.field-meta.xml
<CustomField>
    <fullName>Client_Success_Manager__c</fullName>
    <formula>Account__r.CSM__r.FirstName +&apos; &apos;+
Account__r.CSM__r.LastName</formula>
    <label>Client Success Manager</label>
    <type>Text</type>
</CustomField>