force-app/main/default/objects/Client_Handoff_Summary__c/fields/Clinical_Data_Sharing_and_Access__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Data_Sharing_and_Access__c</fullName>
    <formula>IF(INCLUDES( Client_Overview__r.Clinical_Data_Sharing_and_Access__c , &quot;None&quot;), &quot;None; &quot;, NULL)  + 
IF(INCLUDES( Client_Overview__r.Clinical_Data_Sharing_and_Access__c , &quot;Clinical Portal - Care Coordination&quot;), &quot;Clinical Portal - Care Coordination; &quot;, NULL)  + 
IF(INCLUDES( Client_Overview__r.Clinical_Data_Sharing_and_Access__c , &quot;Clinical Portal - Shared Coaching&quot;), &quot;Clinical Portal - Shared Coaching; &quot;, NULL)  + 
IF(INCLUDES( Client_Overview__r.Clinical_Data_Sharing_and_Access__c , &quot;Reporting/File Share&quot;), &quot;Reporting/File Share; &quot;, NULL) + 
IF(INCLUDES( Client_Overview__r.Clinical_Data_Sharing_and_Access__c , &quot;API Integration&quot;), &quot;API Integration; &quot;, NULL)</formula>
    <label>Clinical Data Sharing and Access</label>
    <type>Text</type>
</CustomField>