force-app/main/default/objects/Client_Handoff_Summary__c/fields/Clinical_Model__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Model__c</fullName>
    <formula>TEXT(Client_Overview__r.Clinical_Model__c)</formula>
    <label>Clinical Model</label>
    <type>Text</type>
</CustomField>