force-app/main/default/objects/Client_Handoff_Summary__c/fields/Clinical_Referrals__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Referrals__c</fullName>
    <formula>TEXT(Client_Overview__r.Clinical_Referrals__c)</formula>
    <label>Clinical Referrals</label>
    <type>Text</type>
</CustomField>