force-app/main/default/objects/Client_Handoff_Summary__c/fields/Contract_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Effective_Date__c</fullName>
    <formula>TEXT(Client_Overview__r.Contract_Effective_Date__c)</formula>
    <label>Contract Effective Date</label>
    <type>Text</type>
</CustomField>