force-app/main/default/objects/Client_Handoff_Summary__c/fields/Contract_Path__c.field-meta.xml
<CustomField>
    <fullName>Contract_Path__c</fullName>
    <formula>Client_Overview__r.Contract_Path__r.Name</formula>
    <label>Contract Path</label>
    <type>Text</type>
</CustomField>