force-app/main/default/objects/Client_Handoff_Summary__c/fields/Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type__c</fullName>
    <formula>TEXT(Client_Overview__r.Contract_Type__c)</formula>
    <label>Contract Type</label>
    <type>Text</type>
</CustomField>