force-app/main/default/objects/Client_Handoff_Summary__c/fields/Data_Sharing_Agreement_Document__c.field-meta.xml
<CustomField>
    <fullName>Data_Sharing_Agreement_Document__c</fullName>
    <formula>TaskRay_Project__r.Data_Sharing_Agreement_Document__c</formula>
    <label>Data Sharing Agreement Document</label>
    <type>Text</type>
</CustomField>