force-app/main/default/objects/Client_Handoff_Summary__c/fields/Do_we_receive_Emails__c.field-meta.xml
<CustomField>
    <fullName>Do_we_receive_Emails__c</fullName>
    <label>Do we receive Emails?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>