force-app/main/default/objects/Client_Handoff_Summary__c/fields/Eligibility_Verification_Method__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Verification_Method__c</fullName>
    <formula>TEXT(Client_Overview__r.Eligibility_Verification_Method__c)</formula>
    <label>Eligibility Verification Method</label>
    <type>Text</type>
</CustomField>