force-app/main/default/objects/Client_Handoff_Summary__c/fields/Email_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Email_Frequency__c</fullName>
    <label>Email Frequency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>