force-app/main/default/objects/Client_Handoff_Summary__c/fields/Enrollment_Marketing_Lead__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Marketing_Lead__c</fullName>
    <formula>Account__r.EML__r.FirstName +&apos; &apos;+
Account__r.EML__r.LastName</formula>
    <label>Enrollment Marketing Lead</label>
    <type>Text</type>
</CustomField>