force-app/main/default/objects/Client_Handoff_Summary__c/fields/How_does_Client_Define_Success__c.field-meta.xml
<CustomField>
    <fullName>How_does_Client_Define_Success__c</fullName>
    <label>How does Client Define Success?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>