force-app/main/default/objects/Client_Handoff_Summary__c/fields/Launch_Assets__c.field-meta.xml
<CustomField>
    <fullName>Launch_Assets__c</fullName>
    <label>Launch Assets</label>
    <length>255</length>
    <type>Text</type>
</CustomField>