force-app/main/default/objects/Client_Handoff_Summary__c/fields/List_legal_documents__c.field-meta.xml
<CustomField>
    <fullName>List_legal_documents__c</fullName>
    <label>List legal documents</label>
    <type>TextArea</type>
</CustomField>