force-app/main/default/objects/Client_Handoff_Summary__c/fields/Livongo_Incentive_for_Automation__c.field-meta.xml
<CustomField>
    <fullName>Livongo_Incentive_for_Automation__c</fullName>
    <formula>TEXT(Client_Overview__r.Livongo_Incentive_for_Automation__c)</formula>
    <label>Livongo Incentive for Automation</label>
    <type>Text</type>
</CustomField>