force-app/main/default/objects/Client_Handoff_Summary__c/fields/Livongo_Led__c.field-meta.xml
<CustomField>
    <fullName>Livongo_Led__c</fullName>
    <formula>Client_Overview__r.Livongo_Led__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Livongo Led?</label>
    <type>Checkbox</type>
</CustomField>