force-app/main/default/objects/Client_Handoff_Summary__c/fields/Marketing_Name__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Name__c</fullName>
    <formula>Client_Overview__r.Marketing_Name__c</formula>
    <label>Marketing Name</label>
    <type>Text</type>
</CustomField>