force-app/main/default/objects/Client_Handoff_Summary__c/fields/Outreach_Stratification__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Stratification__c</fullName>
    <formula>TEXT(Client_Overview__r.Outreach_Stratification__c)</formula>
    <label>Outreach Stratification</label>
    <type>Text</type>
</CustomField>