force-app/main/default/objects/Client_Handoff_Summary__c/fields/Population_of_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Population_of_Coverage__c</fullName>
    <formula>IF(INCLUDES( Client_Overview__r.Population_of_Coverage__c , &quot;Employees&quot;), &quot;Employees; &quot;, NULL)  + 
IF(INCLUDES( Client_Overview__r.Population_of_Coverage__c , &quot;Spouse&quot;), &quot;Spouse; &quot;, NULL)  + 
IF(INCLUDES( Client_Overview__r.Population_of_Coverage__c , &quot;Dependents U18&quot;), &quot;Dependents U18; &quot;, NULL)  + 
IF(INCLUDES( Client_Overview__r.Population_of_Coverage__c , &quot;Dependents 18+&quot;), &quot;Dependents 18+; &quot;, NULL)  + 
IF(INCLUDES( Client_Overview__r.Population_of_Coverage__c , &quot;Employees w/o Medical&quot;), &quot;Employees w/o Medical; &quot;, NULL)  + 
IF(INCLUDES( Client_Overview__r.Population_of_Coverage__c , &quot;Patients&quot;), &quot;Patients; &quot;, NULL)  + 
IF(INCLUDES( Client_Overview__r.Population_of_Coverage__c , &quot;Retirees&quot;), &quot;Retirees; &quot;, NULL)  + 
IF(INCLUDES( Client_Overview__r.Population_of_Coverage__c , &quot;Secondary Insurance&quot;), &quot;Secondary Insurance; &quot;, NULL) + 
IF(INCLUDES( Client_Overview__r.Population_of_Coverage__c , &quot;Direct to Consumer (D2C)&quot;), &quot;Direct to Consumer (D2C); &quot;, NULL) + 
IF(INCLUDES( Client_Overview__r.Population_of_Coverage__c , &quot;Pre-65 Retirees&quot;), &quot;Pre-65 Retirees; &quot;, NULL) + 
IF(INCLUDES( Client_Overview__r.Population_of_Coverage__c , &quot;Cobra&quot;), &quot;Cobra; &quot;, NULL) + 
IF(INCLUDES( Client_Overview__r.Population_of_Coverage__c , &quot;Diabetes Under 13&quot;), &quot;Diabetes Under 13; &quot;, NULL) + 
IF(INCLUDES( Client_Overview__r.Population_of_Coverage__c , &quot;Union Population&quot;), &quot;Union Population; &quot;, NULL)</formula>
    <label>Population of Coverage</label>
    <type>Text</type>
</CustomField>