force-app/main/default/objects/Client_Handoff_Summary__c/fields/Ready_for_Automation__c.field-meta.xml
<CustomField>
    <fullName>Ready_for_Automation__c</fullName>
    <formula>Client_Overview__r.Ready_for_Automation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ready for Automation</label>
    <type>Checkbox</type>
</CustomField>