force-app/main/default/objects/Client_Handoff_Summary__c/fields/Recipient__c.field-meta.xml
<CustomField>
    <fullName>Recipient__c</fullName>
    <label>Recipient</label>
    <length>100</length>
    <type>Text</type>
</CustomField>