force-app/main/default/objects/Client_Handoff_Summary__c/fields/Reporting_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Frequency__c</fullName>
    <formula>TEXT(TaskRay_Project__r.Reporting_Frequency__c)</formula>
    <label>Reporting Frequency</label>
    <type>Text</type>
</CustomField>