force-app/main/default/objects/Client_Handoff_Summary__c/fields/Reporting_Method_of_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Method_of_Delivery__c</fullName>
    <formula>TEXT(TaskRay_Project__r.Reporting_Method_of_Delivery__c)</formula>
    <label>Reporting Method of Delivery</label>
    <type>Text</type>
</CustomField>