force-app/main/default/objects/Client_Handoff_Summary__c/fields/Reporting_Type__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Type__c</fullName>
    <formula>TEXT(TaskRay_Project__r.Report_Request_Type__c)</formula>
    <label>Reporting Type</label>
    <type>Text</type>
</CustomField>