force-app/main/default/objects/Client_Handoff_Summary__c/fields/Reporting_Type_Detail__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Type_Detail__c</fullName>
    <formula>TEXT(TaskRay_Project__r.Report_Type_Detail__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reporting Type Detail</label>
    <type>Text</type>
</CustomField>