force-app/main/default/objects/Client_Handoff_Summary__c/fields/Scorecards_available_on_Box__c.field-meta.xml
<CustomField>
    <fullName>Scorecards_available_on_Box__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Scorecards available on Box</label>
    <type>Checkbox</type>
</CustomField>